--- a/style.css
+++ b/style.css
@@ -1,156 +1,192 @@
 *{
     margin: 0;
     padding: 0;
+    border: none;
+    font-family: arial;
 }
-body{
-   background-image: linear-gradient(  45deg, rgb(213, 85, 85),rgb(87, 219, 175),rgb(130, 50, 167), rgb(151, 167, 65),rgb(228, 174, 73)) ;
-   color:aliceblue;
-}
-.nav{
-    display: flex;
-    justify-content: space-around;
-    position: fixed;
-    width: 100%;
-    height: 8vh;
-    z-index: 999;
-    padding: 30px 10px;
-    background-image: linear-gradient(rgb(72, 72, 25) , rgb(128, 96, 37));
-    align-items: center;
-}
-.ayush{
-    font-size: 2.5rem;
-    font-family: 'Rubik Iso', cursive;
-    font-family: 'Tilt Prism', cursive;
-}
-.navl{
-    list-style: none;
-    padding: 0;
-    display: flex;
-    justify-content: space-evenly;
-    height: 8vh;
-    align-items: center;
-}
-.navi{
-    position: sticky;
-    padding: 1vh;
-    margin-left: 10vh;
-   font-size: 1.5rem;
-   cursor: pointer;
-   transition-property: font-size color;
-   transition-duration: .5s;
-}
-.navi:hover{
-    font-size: 1.9rem;
-    color: rgb(86, 172, 247);
-}
-main{
-
-}
-div.mains{
-    height: 100vh;
+div.navbar{
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 60px;
+    color: #f0f8ff;
+    background-color: #0F1111;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    font-weight: 300;
+    justify-content: space-between;
 }
-.hi{
-    font-size: 2rem;
+.logo{
+    height: 50px;
 }
-.name{
-    margin-top: 15px;
-    font-size: 3rem;
-}
-.work{
-    margin-top: 5px;
-    font-size: 2.3rem;
-}
-.disc{
-    margin-top: 20px;
-    font-size: 1.5rem;
-    color: rgb(198, 199, 200);
-    width: 75vh;
-}
-.main3{
-    height: 92vh;
-    font-size: 2.5rem;
-    background-image: url(pexels-pixabay-531880.jpg);
-    background-size: cover;
-    color: rgb(22, 22, 22);
-}
-.optionbar{
-    height: 10vh;
-    width: 100vh;
-    display: flex;
-    justify-content: space-around;
+.loc{
+    height: 50px;
     align-items: center;
-    border-bottom: solid black 2px;
 }
-.opti{
-    font-size: 2rem;
-    padding: 5px;
-    margin-left: 20px;
+.loca{
+    display: flex;
+    }
+.loc-up{
+    font-size: 12px;
+    color: #CCCCCC;
+    margin-left: 25px;
+}
+.loc-down{
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 550;
+}
+.search1{
+    display: flex;
+    height: 50px;
+    width: 778px;
+    align-items: center;
+    justify-content: space-between;
+    margin-right: 10px;
+    margin-left: 10px;
+    padding: 5px
+}
+.search{
+    height: 40px;;
+}
+.option{
+    width: 51px;
+    border-right: solid 1px rgb(198, 194, 194);
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    text-align: center;
+    color: #6f6f6f;
+}
+.input{
+    width:677px;
+    border: none;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.input:active{
+    border: none;
+}
+.submit{
+    width: 50px;
     cursor: pointer;
-    transition-property: font-size color ;
-    transition-duration: .3s;
-
+    border: none;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    background-color: #e98d36;
 }
-.opti:hover{
-    font-size: 2.3rem;
-    color: black;
-}
-.aboutm{
-    text-align: center;
-    padding-top: 5vh;
-    font-size: 5rem;
-    color: rgb(29, 29, 64);
-}
-
-.mystory{
-    height: 63vh;
+.country{
+    height: 60px;
     display: flex;
-    justify-content: space-around;
     align-items: center;
-    transition-property: color;
-    transition-duration: 2s;
-    transition-delay: 1s;
+    margin-right: 10px;
 }
-.mystory > div {
-    width: 90vh;
-    font-size: 2rem;
+img.india{
+    height: 22px;
+    padding: 5px;
 }
-.main4{
-    width: 100%;
-    height: 92vh;
-    background-image: url(pexels-veeterzy-303383.jpg);
+.EN1{
+    font-size: 14px;
+    font-weight: 400;
+    background-color: #e98d36;
+}
+.signin{
+    margin-right: 10px;
+    margin-right: 10px;
+}
+.order{
+    margin-left: 10px;
+    margin-right: 10px;
+}
+.cart{
+    display: flex;
+    align-items: center;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.material-symbols-outlined{
+    height: 50px;
+}
+.border{
+    align-items: center;
+}
+.border:hover{
+    border: 1px solid aliceblue;
+}
+.cart{
+    margin-right: 20px;
+}
+.nav2{
+    right: 0;
+    left: 0;
+    height: 5vh;
+    background-color: #21243a;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.left{
+    display: flex;
+    float: left;
+    margin-left: 1vh ;
+}
+.right{
+    margin-right: 1vh;
+}
+.navi2{
+    color: #f0f8ff;
+    font-weight: 400;
+    font-size: .9rem;
+    padding: .5vh;
+}
+.main{
+    width: 203.8vh;
+    height: 100vh;
+    background-image: url(background.jpg);
+    background-position: center;
     background-size: cover;
-    background-blend-mode: lighten;
-.project{
-    padding-top: 5vh;
-    font-size: 5rem;
-    text-align: center;
+    background-repeat: no-repeat;
+    overflow: hidden;
+    position: absolute;
 }
-.projects{
+.product{
     display: flex;
-    align-items: center;
+    flex-wrap: wrap;
     justify-content: space-evenly;
-    height: 73vh;
+    overflow-y: scroll;
+    position: absolute;
+    margin-top: 50vh;
 }
-.ubers{
-    height: 55vh;
-    overflow: hidden;
-}
-.uber{
+.card{
     height: 50vh;
-    border-radius: 20px;
-    transition-property: height;
-    transition-duration: .5s;
+    width: 40vh;
+    margin: 10px;
+    padding: 10px;
 }
-.uber:hover{
-    border-radius: 20px;
-    height: 60vh;
-    overflow: hidden;
+.heading{
+    font-size: 1.4rem;
+    font-weight: 550;
+    color: #37394c;
 }
-.detail{
-    font-size: 1.5rem;
-    color: rgb(31, 13, 13);
-    font-weight: 1000;
+.cardimg1{
+    width: 40vh;
+    margin-top: 2vh;
+    cursor: pointer;
+}
+.cardimg{
+    width: 19vh;
+    padding: 0.5vh;
+    margin-top: 20px;
+    cursor: pointer;
+}
+.card2{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: baseline;
+}
+.title{
+    font-size: .8rem;
+    color: #6f6f6f;
+}
+footer{
+    display: flex;
 }
